--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>🚴stradeviola😈‍</title>
+        <link rel="icon" href="favicon.svg">
         <style>
             /* Reset */
             *:where(:not(html, iframe, canvas, img, svg, video, audio):not(svg *, symbol *)) {
