--- a/public/index.html
+++ b/public/index.html
@@ -49,6 +49,7 @@
                 --border-width: 1px;
                 --grid: 1rem;
                 font-size: var(--default-font-size);
+                height: 100%;
                 scroll-behavior: smooth;
             }
             body {
@@ -56,6 +57,7 @@
                 color: var(--loud);
                 container-type: inline-size;
                 font-family: var(--serif);
+                height: 100%;
                 line-height: var(--default-line-height);
             }
             main {
