separate column groups

--- a/public/index.html
+++ b/public/index.html
@@ -97,6 +97,10 @@
                 font-weight: var(--bold-weight);
             }
 
+            colgroup {
+                border-inline: var(--border-width) solid var(--whisper);
+            }
+
             /* Local */
             .center { text-align: center; }
             .fg-green { color: var(--green); }
@@ -110,6 +114,9 @@
             <h1 class="center">🚴<span class="fg-green">strade</span><span class="fg-purple">viola</span>😈‍</h1>
             <canvas id="chart" style="width:100%"></canvas>
             <table>
+                <colgroup span="3"></colgroup>
+                <colgroup span="4"></colgroup>
+                <colgroup span="4"></colgroup>
                 <thead>
                     <tr>
                         <th>year</th>
