only style interior colgroup borders

--- a/public/index.html
+++ b/public/index.html
@@ -97,8 +97,8 @@
                 font-weight: var(--bold-weight);
             }
 
-            colgroup {
-                border-inline: var(--border-width) solid var(--whisper);
+            colgroup + colgroup {
+                border-inline-start: var(--border-width) solid var(--whisper);
             }
 
             #chart {
