Fix 1px overlap from colgroups

--- a/public/index.html
+++ b/public/index.html
@@ -84,10 +84,12 @@
                 font-weight: var(--bold-weight);
             }
             thead {
+                border-block-start: var(--border-width) solid var(--hushed);
                 border-block-end: var(--border-width) solid var(--whisper);
             }
             tfoot {
                 border-block-start: var(--border-width) solid var(--whisper);
+                border-block-end: var(--border-width) solid var(--hushed);
             }
             td, th {
                 padding-block: calc(var(--grid) * 0.25);
